HeapDump and HeapDump OQL Revisited