@@ -62,11 +62,14 @@ import cafe.jeffrey.profile.heapdump.model.JvmStringFlag;
 import cafe.jeffrey.profile.heapdump.model.LeakSuspectsReport;
 import cafe.jeffrey.profile.heapdump.model.OQLQueryRequest;
 import cafe.jeffrey.profile.heapdump.model.OQLQueryResult;
-import cafe.jeffrey.profile.heapdump.model.OQLResultEntry;
 import cafe.jeffrey.profile.heapdump.model.SortBy;
 import cafe.jeffrey.profile.heapdump.model.StringAnalysisReport;
 import cafe.jeffrey.profile.heapdump.model.ThreadAnalysisReport;
 import cafe.jeffrey.profile.heapdump.model.ThreadStackFrame;
+import cafe.jeffrey.profile.heapdump.oql.OqlEngine;
+import cafe.jeffrey.profile.heapdump.oql.ast.OqlStatement;
+import cafe.jeffrey.profile.heapdump.oql.compiler.ExecutionPlan;
+import cafe.jeffrey.profile.heapdump.oql.parser.OqlParseException;
 import cafe.jeffrey.profile.heapdump.parser.HeapDumpIndexPaths;
 import cafe.jeffrey.profile.heapdump.parser.HeapDumpSession;
 import cafe.jeffrey.profile.heapdump.parser.HeapView;
@@ -88,18 +91,12 @@ import java.io.InputStream;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.StandardCopyOption;
-import java.sql.PreparedStatement;
-import java.sql.ResultSet;
-import java.sql.ResultSetMetaData;
 import java.sql.SQLException;
 import java.time.Clock;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.Locale;
 import java.util.Map;
 import java.util.Optional;
-import java.util.Set;
-import java.util.regex.Pattern;
 
 /**
  * Implementation of HeapDumpManager on the native parser path
@@ -125,9 +122,9 @@ public class HeapDumpManagerImpl implements HeapDumpManager {
     private static final String THREAD_ANALYSIS_FILE = "thread-analysis.json";
     private static final String COLLECTION_ANALYSIS_FILE = "collection-analysis.json";
     private static final String BIGGEST_OBJECTS_FILE = "biggest-objects.json";
-    private static final String LEAK_SUSPECTS_FILE = "leak-suspects-v2.json";
+    private static final String LEAK_SUSPECTS_FILE = "leak-suspects.json";
     private static final String BIGGEST_COLLECTIONS_FILE = "biggest-collections.json";
-    private static final String CLASSLOADER_ANALYSIS_FILE = "classloader-analysis-v2.json";
+    private static final String CLASSLOADER_ANALYSIS_FILE = "classloader-analysis.json";
     private static final String CONSUMER_REPORT_FILE = "consumer-report.json";
     private static final String HEAP_DUMP_CONFIG_FILE = "heap-dump-config.json";
     private static final String INIT_PIPELINE_RESULT_FILE = "init-pipeline-result.json";
@@ -149,18 +146,21 @@ public class HeapDumpManagerImpl implements HeapDumpManager {
     private final ProfileEventRepository eventRepository;
     private final Clock clock;
     private final Path heapDumpAnalysisPath;
+    private final OqlEngine oqlEngine;
 
     public HeapDumpManagerImpl(
             ProfileInfo profileInfo,
             AdditionalFilesManager additionalFilesManager,
             ProfileEventRepository eventRepository,
-            Clock clock) {
+            Clock clock,
+            OqlEngine oqlEngine) {
 
         this.profileInfo = profileInfo;
         this.additionalFilesManager = additionalFilesManager;
         this.eventRepository = eventRepository;
         this.clock = clock;
         this.heapDumpAnalysisPath = additionalFilesManager.getHeapDumpAnalysisPath();
+        this.oqlEngine = oqlEngine;
     }
 
     // --- Lifecycle helpers ------------------------------------------------
@@ -228,52 +228,41 @@ public class HeapDumpManagerImpl implements HeapDumpManager {
                 .orElse(List.of());
     }
 
-    // --- SQL Query against the heap-dump-index DuckDB --------------------
+    // --- OQL execution against the heap-dump-index DuckDB ---------------
 
     private static final int MAX_QUERY_LIMIT = 100;
-    private static final int QUERY_TIMEOUT_SECONDS = 30;
-    private static final int ROW_PREVIEW_CAP_CHARS = 500;
-    private static final String SQL_KEYWORD_SELECT = "select";
-    private static final String SQL_KEYWORD_WITH = "with";
-    /** Matches a standalone {@code LIMIT} keyword (any case) regardless of surrounding
-     *  whitespace — handles "LIMIT 50", "limit\n50", "LENGTH(value)LIMIT 50", etc. */
-    private static final Pattern SQL_KEYWORD_LIMIT_PATTERN =
-            Pattern.compile("\\blimit\\b", Pattern.CASE_INSENSITIVE);
-
-    /** Column-name aliases recognised when mapping a generic SELECT row to {@link OQLResultEntry}. */
-    private static final Set<String> OBJECT_ID_COLUMN_ALIASES =
-            Set.of("instance_id", "object_id", "id");
-    private static final Set<String> CLASS_NAME_COLUMN_ALIASES =
-            Set.of("name", "class_name", "classname");
-    private static final Set<String> SHALLOW_SIZE_COLUMN_ALIASES =
-            Set.of("shallow_size", "size");
-    private static final Set<String> RETAINED_SIZE_COLUMN_ALIASES =
-            Set.of("retained_size", "retained", "bytes");
 
     @Override
     public OQLQueryResult executeQuery(OQLQueryRequest request) {
-        String query = request.query().trim();
-        String normalized = query.toLowerCase(Locale.ROOT);
-        if (!normalized.startsWith(SQL_KEYWORD_SELECT) && !normalized.startsWith(SQL_KEYWORD_WITH)) {
-            return OQLQueryResult.error(
-                    "Only SELECT and WITH queries are allowed against the heap-dump index.", 0);
+        String query = request.query() == null ? "" : request.query().trim();
+        if (query.isBlank()) {
+            return OQLQueryResult.error("Query is empty", 0);
         }
 
-        int effectiveLimit = Math.min(Math.max(1, request.limit()), MAX_QUERY_LIMIT);
-        String boundedQuery = appendLimitIfMissing(query, effectiveLimit);
+        int effectiveLimit = Math.clamp(request.limit(), 1, MAX_QUERY_LIMIT);
+
+        OqlStatement stmt;
+        try {
+            stmt = oqlEngine.parse(query);
+        } catch (OqlParseException e) {
+            return OQLQueryResult.error("Parse error at " + e.location() + ": " + e.getMessage(), 0);
+        }
+
+        ExecutionPlan plan;
+        try {
+            plan = oqlEngine.compile(stmt);
+        } catch (RuntimeException e) {
+            return OQLQueryResult.error("Compile error: " + e.getMessage(), 0);
+        }
 
         var elapsed = Measuring.s(() -> withSession(session -> {
-            if (request.includeRetainedSize()) {
+            if (plan.needsDominatorTree() || request.includeRetainedSize()) {
                 session.buildDominatorTreeIfNeeded();
             }
-            try (PreparedStatement stmt =
-                         session.view().connection().prepareStatement(boundedQuery)) {
-                stmt.setQueryTimeout(QUERY_TIMEOUT_SECONDS);
-                try (ResultSet rs = stmt.executeQuery()) {
-                    return mapResultSet(rs, effectiveLimit);
-                }
+            try {
+                return oqlEngine.execute(plan, session.view(), effectiveLimit);
             } catch (SQLException e) {
-                LOG.warn("Heap-dump SQL query failed: query={} error={}", boundedQuery, e.getMessage());
+                LOG.warn("OQL execution failed: query={} error={}", query, e.getMessage());
                 return OQLQueryResult.error("Query failed: " + e.getMessage(), 0);
             }
         }).orElseGet(() -> OQLQueryResult.error("Heap dump not available for this profile", 0)));
@@ -282,91 +271,6 @@ public class HeapDumpManagerImpl implements HeapDumpManager {
         return new OQLQueryResult(
                 r.results(), r.totalCount(), r.hasMore(),
                 elapsed.duration().toMillis(), r.errorMessage());
-    }
-
-    private static String appendLimitIfMissing(String query, int limit) {
-        // Detect a standalone LIMIT keyword anywhere in the query (word boundaries
-        // so we don't get tricked by `LIMITS` or similar). Real SQL parsing would
-        // be heavier; this heuristic only false-positives on a `limit` *inside a
-        // string literal*, which is acceptable.
-        if (SQL_KEYWORD_LIMIT_PATTERN.matcher(query).find()) {
-            return query;
-        }
-        return query + " LIMIT " + limit;
-    }
-
-    private static OQLQueryResult mapResultSet(ResultSet rs, int limit) throws SQLException {
-        ResultSetMetaData md = rs.getMetaData();
-        int colCount = md.getColumnCount();
-        SpecialColumns special = identifySpecialColumns(md, colCount);
-        List<OQLResultEntry> entries = new ArrayList<>();
-        while (rs.next() && entries.size() < limit) {
-            // null when the query didn't select a column we recognize as an
-            // instance/object id — frontend uses that to hide the per-row
-            // action buttons for rows that can't be drilled into.
-            Long objectId = special.objectId != -1 ? safeLong(rs, special.objectId) : null;
-            String className = special.className != -1 ? rs.getString(special.className) : null;
-            long size = special.size != -1 ? safeLong(rs, special.size) : 0L;
-            Long retained = null;
-            if (special.retainedSize != -1) {
-                long v = rs.getLong(special.retainedSize);
-                retained = rs.wasNull() ? null : v;
-            }
-            entries.add(new OQLResultEntry(
-                    objectId, className, formatRow(rs, md, colCount), size, retained));
-        }
-        boolean hasMore = entries.size() >= limit;
-        return OQLQueryResult.success(entries, entries.size(), hasMore, 0);
-    }
-
-    private static long safeLong(ResultSet rs, int columnIndex) {
-        try {
-            return rs.getLong(columnIndex);
-        } catch (SQLException ignored) {
-            return 0L;
-        }
-    }
-
-    /** Stringify one row as "col=value, col=value" for the generic preview cell. */
-    private static String formatRow(ResultSet rs, ResultSetMetaData md, int colCount) throws SQLException {
-        StringBuilder sb = new StringBuilder();
-        for (int i = 1; i <= colCount; i++) {
-            if (i > 1) {
-                sb.append(", ");
-            }
-            sb.append(md.getColumnLabel(i)).append('=');
-            Object v = rs.getObject(i);
-            sb.append(v == null ? "null" : v);
-            if (sb.length() > ROW_PREVIEW_CAP_CHARS) {
-                sb.append('…');
-                break;
-            }
-        }
-        return sb.toString();
-    }
-
-    private static SpecialColumns identifySpecialColumns(ResultSetMetaData md, int colCount) throws SQLException {
-        SpecialColumns c = new SpecialColumns();
-        for (int i = 1; i <= colCount; i++) {
-            String label = md.getColumnLabel(i).toLowerCase(Locale.ROOT);
-            if (c.objectId == -1 && OBJECT_ID_COLUMN_ALIASES.contains(label)) {
-                c.objectId = i;
-            } else if (c.className == -1 && CLASS_NAME_COLUMN_ALIASES.contains(label)) {
-                c.className = i;
-            } else if (c.size == -1 && SHALLOW_SIZE_COLUMN_ALIASES.contains(label)) {
-                c.size = i;
-            } else if (c.retainedSize == -1 && RETAINED_SIZE_COLUMN_ALIASES.contains(label)) {
-                c.retainedSize = i;
-            }
-        }
-        return c;
-    }
-
-    private static final class SpecialColumns {
-        int objectId = -1;
-        int className = -1;
-        int size = -1;
-        int retainedSize = -1;
     }
 
     // --- Threads ---------------------------------------------------------
